# zoidberg-running-coach

./: .gitignore  AGENTS.md  README.md  prd.json  progress.txt  pyproject.toml  ralph.sh  sisyphus.sh
src/zoidberg_coach/: __init__.py  __main__.py  analysis.py  cli.py  coaching.py  garmin_client.py  patterns.py
tests/: test_analysis.py  test_cli_activities.py  test_garmin_client.py  test_readiness.py  test_scaffold.py
