[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoidberg-coach"
version = "0.1.0"
description = "A CLI tool that analyzes Garmin training data and provides half marathon coaching suggestions"
requires-python = ">=3.11"
dependencies = [
    "garth>=0.4",
    "typer>=0.9",
    "pandas>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
zoidberg-coach = "zoidberg_coach.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
